--- a/test.properties
+++ b/test.properties
@@ -1,4 +1,4 @@
 # This is my test.properties file
-megogoURL=http://epg.megogo.net/channel?external_id=295
-providerURL=http://www.vsetv.com/export/megogo/epg/3.xml
+megogoURL=http://epg.megogo.net/channel?external_id=
+providerURL=http://www.vsetv.com/export/megogo/epg/
 localTimeURL = http://epg.megogo.net/time
